# onnx-mlir-dialect

./: .gitignore  CMakeLists.txt  MLIR.cmake  README.md
src/Runtime/: CMakeLists.txt
